--- a/sass/main.css
+++ b/sass/main.css
@@ -494,6 +494,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #616161;
+  height: 150vh;
 }
 .pricing .about-pricing {
   color: white;
@@ -508,13 +509,13 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
-  gap: 20px;
 }
 .pricing .main-pricing .pricing-box {
   flex-basis: calc(33.3333333333% - 25px);
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 10px;
 }
 .pricing .main-pricing .pricing-box .pricing-box-div {
   display: flex;
@@ -545,6 +546,21 @@ body {
   margin: 0;
   padding: 0;
 }
+.pricing .main-pricing .pricing-box .pricing-box-main-price {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  height: 30%;
+}
+.pricing .main-pricing .pricing-box .pricing-box-main-price .pricing-box-price {
+  font-size: 30px;
+}
+.pricing .main-pricing .pricing-box .pricing-box-main-price .pricing-box-price-des {
+  color: #858383;
+}
 .pricing .main-pricing .pricing-box .pricing-box-button {
   display: flex;
   justify-content: center;
@@ -552,6 +568,7 @@ body {
   width: 100%;
   height: 100px;
   background-color: #eee;
+  margin-bottom: 20px;
 }
 .pricing .main-pricing .pricing-box .pricing-box-button .pricing-box-link {
   display: flex;
@@ -563,4 +580,7 @@ body {
   font-size: 15px;
   height: 50%;
   flex-basis: 25%;
+}
+.pricing .main-pricing .pricing-box .button-pro {
+  margin: 0;
 }/*# sourceMappingURL=main.css.map */
