--- a/sass/main.scss
+++ b/sass/main.scss
@@ -575,6 +575,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #616161;
+    height: 150vh;
     .about-pricing{
         color: white;
         margin: 100px 0 50px 0;
@@ -591,12 +592,13 @@
         display: flex;
         width: 100%;
         justify-content: center;
-        gap: 20px;
+        // gap: 20px;
         .pricing-box{
             flex-basis: calc(100% / 3 - 25px);
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 0 10px;
             .pricing-box-div{
                 @include flex-center;
                 background-color: black;
@@ -624,12 +626,28 @@
                     padding: 0;
                 }
             }
+            .pricing-box-main-price{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+                background-color: white;
+                width: 100%;
+                height: 30%;
+                .pricing-box-price{
+                    font-size: 30px;
+                }
+
+                .pricing-box-price-des{
+                    color: #858383
+                }
+            }
             .pricing-box-button{
                 @include flex-center;
                 width: 100%;
                 height: 100px;
                 background-color: #eee;
-
+                margin-bottom: 20px ;
                 .pricing-box-link{
                     @include flex-center;
                     text-decoration: none;
@@ -641,6 +659,12 @@
                     flex-basis: 25%;
                 }
             }
+            
+            .button-pro{
+                // margin-bottom: 1
+                margin: 0;
+            }
+
         }    
     }
 
