--- a/sass/main.scss
+++ b/sass/main.scss
@@ -669,3 +669,148 @@
     }
 
 }
+
+
+.contact{
+    display: flex;
+    background-color: #eee;
+    flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
+    .about-contact{
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        // align-content: space-evenly;
+        color: black;
+        margin: 100px 0 50px 0;
+        .about-contact-div{
+            width: 100%;
+            font-size: 20px;
+            text-align: center;        
+        }
+    }
+    .main-contact-info{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .contact-info{
+            width: 97%;
+            height: 50px;
+        }
+        .contact-fixed-info{
+            display: flex;
+            align-items: center;
+            font-size: 15px;
+            .contact-fixed-info-icon{
+                height: 40px;
+                width: 30px;
+                margin-right: 10px;
+            }
+        }
+
+        .contact-info-form{
+            display: flex;
+            flex-direction: column;
+            height: 300px;
+            margin: 50px 0 ;
+            .contact-info-input{
+                height: 50px;
+                margin-bottom: 10px;
+                border: 0.5px solid #d6d5d5;
+            }
+            .contact-info-input-button{
+                height: 40px;
+                width: 150px;
+                background-color: black;
+                color: white;
+                text-align: center;
+                font-size: 15px;
+                .contact-info-input-link{
+                    text-decoration: none;
+                    color: white;
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .contact-info-input-link-icon{
+                        height: 20px;
+                        width: 20px;
+                        margin-right: 10px;
+                        color: white;
+                        // background-color: white;
+                    }
+                }
+            }
+        }
+        .contact-info-pic{
+            background-image: url("../map.jpg");
+            background-size: cover;
+            background-repeat: no-repeat;
+            filter: grayscale(80%);
+            height: 800px;
+            width: 97%;
+
+            margin-bottom: 100px;
+        }
+    }
+}
+
+
+.footer{
+    
+
+    .main-footer{
+    background-color: black;
+    color: white;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    
+    .footer-button{
+        height: 40px;
+        width: 140px;
+        background-color: #eee;
+        .footer-items-link{
+            text-decoration: none;
+            font-size: 15px;
+            color: black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            &:hover {
+                background-color: #d6d5d5;
+            }
+            .footer-items-link-icon{
+                height: 20px;
+                width: 20px;
+                // margin-right: 10px;
+                }
+            }
+        }
+
+        .footer-social{
+            display: flex;
+            justify-content: space-evenly;
+            width: calc(100% / 5 - 20px);
+            .footer-social-link{
+                @include flex-center;
+                height: 40px;
+                width: 40px;
+                color: #eee;
+                &:hover {
+                    opacity: 0.5;
+                }
+                .footer-social-link-icon{
+                    height: 20px;
+                    width: 20px;
+                }
+            }
+        }
+    }
+}
