--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,7 +77,7 @@
     justify-content: center;
     z-index: 0;
     .one {
-        font-size: 70px;
+        // font-size: 70px;
     }
     .two {
         font-size: 18px;
@@ -156,7 +156,7 @@
 .company {
 
     background-color: white;
-    height: 100vh;
+    height: 150vh;
     padding: 20px;
     align-items: center;
     // display: grid;
@@ -170,6 +170,7 @@
         justify-content: center;
         align-items: center;
         margin: 100px 0 ;
+        // height: 100vh;
         .about-sec{
             .about-p {
                 font-size: 25px;
@@ -183,27 +184,39 @@
         }
     }
     .services-boxes {
-        @include flex-center;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
         gap: 20px;
         margin: 50px 0;
+        // width: 50%;
+        // height: 500px;
         .service-box {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        .pic-service-div{
-            @include flex-center;
-            .service-svg-pic {
-                @include svg-set;
+            // display: flex;
+            // justify-content: center;
+            // flex-wrap: wrap;
+            // @media (min-width: 601px){
+            // width: calc(100% / 4 - 30px);   
+            // }  
+            // // width: calc(100% / 2 - 20px);
+            // @media (max-width : 600px) {
+            //     width: calc(100% / 2 - 20px);
+                
+            // }
+            .pic-service-div{
+                @include flex-center;
+                .service-svg-pic {
+                    @include svg-set;
+                }
+            }
+            .section-service-box {
+                @include flex-center;
+                flex-direction: column;
+                .service-section-p,.service-section-des{
+                    text-align: center;
+                }
             }
         }
-        .section-service-box {
-            @include flex-center;
-            flex-direction: column;
-            .service-section-p,.service-section-des{
-                text-align: center;
-            }
-        }
-    }
     // .passion {
     //     .pic-passion{
     //         @include flex-center;
@@ -326,7 +339,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     .team-member {
-        width: calc(100% / 4 - 30px);
+        
         height: fit-content;
         // margin: 20px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 4px 15px 0 rgba(0, 0, 0, 0.1);
@@ -452,7 +465,7 @@
         justify-content: space-evenly;
         flex-wrap: wrap;
         .our-work-image{
-            flex-basis: calc(100% / 4 - 20px);
+            // flex-basis: calc(100% / 4 - 20px);
             background-color: #333;
             height: 200px;
             margin: 5px;
@@ -654,9 +667,9 @@
                     background-color: black;
                     color: white;
                     font-size: 15px;
-                    height: 50%;
+                    height: 45px;
                     // width: 25%;
-                    flex-basis: 25%;
+                    flex-basis: 100px;
                 }
             }
             
@@ -797,7 +810,7 @@
         .footer-social{
             display: flex;
             justify-content: space-evenly;
-            width: calc(100% / 5 - 20px);
+            // width: calc(100% /5 - 20px);
             .footer-social-link{
                 @include flex-center;
                 height: 40px;
@@ -812,5 +825,184 @@
                 }
             }
         }
+
+        .footer-creator{
+
+            .footer-creator-link{
+                color: white;
+                font-size: 15px;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px){
+    .header{
+        .main-menu {
+            display: none;
+        }
+    }
+    .in-pic{
+        .one{
+            font-size: 30px;
+        }
+    }
+
+    .company {
+        height: fit-content;
+        .services-boxes {
+            .service-box {
+                width: calc(100% - 20px);
+            }
+        }
+    }
+
+    .show-work {
+        flex-direction: column;
+        .show-work-text{
+            width: calc(100% - 50px);
+            height: auto;
+            margin: 50px 0 0 0;
+            
+        }
+        .pic{
+            width: calc(100% - 50px);
+            margin: 0 0 100px 0;
+        }
+    }
+
+    .team{
+        height: 400vh;    
+        .main-team-member{
+            .team-member {
+                width: 100%;
+            }
+        }
+    }   
+
+    .statistics{
+        flex-direction: column;
+        .statistics-item{
+            height: 100px;
+            width: 100%;
+        }
+    }
+
+    .our-work {
+        .main-our-work-image{
+            .our-work-image{
+                width: 100%;
+                height: 390px;
+            }
+        }
+    }
+
+    .our-skils{
+        flex-direction: column;
+        align-items: normal;
+        height: 120vh;
+        .main-skils{
+            .skils{
+                width: 90%;
+                .skils-bar{
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    .pricing {
+        height: 390vh;
+        .main-pricing{
+            flex-direction: column;
+            align-items: center;
+            .pricing-box{
+                // flex-basis: calc(100% - 50px);
+                width: 90%;
+            }
+        }
+    }
+
+    .contact{
+        .main-contact-info{
+            .contact-info{
+                width: 94%;
+            }
+            .contact-info-pic{
+                height: 380px;
+                width: 94%;
+            }
+        }
+    
+    }
+    
+}
+
+@media (min-width: 601px){
+    .in-pic {   
+        .one {
+        font-size: 70px;
+        }
+    }
+
+    .company {
+        .services-boxes {
+            .service-box {
+                width: calc(100% / 4 - 30px);
+            }
+        }
+    }
+    
+
+    
+    .team{   
+        height: 209vh;
+        .main-team-member{
+            .team-member {
+                width: calc(100% / 2 - 20px);
+            }
+        }
+    
+    }
+
+    .our-work {
+        .main-our-work-image{
+            .our-work-image{
+                width: calc(100% / 2 - 20px);
+                // height: 390px;
+            }
+        }
+    }
+
+    .pricing {
+        height: 180vh;
+        .main-pricing{
+            
+            .pricing-box{
+                flex-basis: calc(33.3333333333% - 5px);
+            }
+        }
+    }
+}
+
+@media (min-width: 993px){
+    .team{
+        .main-team-member{
+            .team-member {
+                width: calc(100% / 4 - 30px);
+            }
+        }
+    }   
+    
+}
+@media (max-width: 992px){
+
+    .our-work {
+    .main-our-work-image{
+        .our-work-image{
+            width: calc(100% / 4 - 20px);
+            // height: 390px;
+        }
+    }
     }
 }
